ngapp/src/app/student-components/dashboard/dashboard.component.css
.synthesisLoading {
  align: center;
  border-right: 2px solid orange;
  border-left: 2px solid red;
  border-top: 2px solid green;
  border-bottom: 2px solid blue;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  animation: spin 5s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.ql-container {
  height: auto;
}

.ql-editor {
  background-color: #f7f2e7;
  /* ~44px is the height of the toolbar */
  height: calc(var(--textfieldHeight));
  z-index: 1;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  font-size: 14pt;
  font-family: "Times New Roman", Times, serif;
}

.⚙ {
  font-size: x-large;
  color: darkgrey;
  cursor: pointer;
  padding-left: 5px;
  padding-right: 5px;
}

.⚙:hover {
  color: black;
  background-color: #aeffc486;
}

.loader {
  font-size: 2px;
  text-indent: -9999em;
  width: 11em;
  height: 11em;
  border-radius: 50%;
  --backgroundColor: cyan;
  background: var(--backgroundColor);
  background: -moz-linear-gradient(left, var(--backgroundColor) 10%, rgba(255, 255, 255, 0) 42%);
  background: -webkit-linear-gradient(left, var(--backgroundColor) 10%, rgba(255, 255, 255, 0) 42%);
  background: -o-linear-gradient(left, var(--backgroundColor) 10%, rgba(255, 255, 255, 0) 42%);
  background: -ms-linear-gradient(left, var(--backgroundColor) 10%, rgba(255, 255, 255, 0) 42%);
  background: linear-gradient(to right, var(--backgroundColor) 10%, rgba(255, 255, 255, 0) 42%);
  position: relative;
  -webkit-animation: load3 1.4s infinite linear;
  animation: load3 1.4s infinite linear;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}
.loader::before {
  width: 50%;
  height: 50%;
  background: cyan;
  border-radius: 100% 0 0 0;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
}
.loader::after {
  background: transparent;
  width: 75%;
  height: 75%;
  border-radius: 50%;
  content: '';
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
@-webkit-keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load3 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.bookContainer {
    --bookContainerHeight: 40vh;
    --bookContainerWidth: 95%;
    --textfieldHeight: calc(var(--bookContainerHeight));
    --dictionaryHeight: 50vh;
    width: var(--bookContainerWidth);
    margin-left: 2.5%;
    background: url("assets/img/paperBg.jpg") no-repeat center center fixed; 
    -webkit-box-shadow: 0px 0px 11px 2px rgba(0,0,0,0.4);
    -moz-box-shadow: 0px 0px 11px 2px rgba(0,0,0,0.4); 
    box-shadow: 0px 0px 11px 2px rgba(0,0,0,0.4);
    border-radius: 5px 5px 5px 5px;
    border: solid 2px #827662b8;
}

.bookImg {
    z-index: -10;
    width: 90%;
    height: 500px;
    position: fixed;
    right: 5%;
}

.storyTitle {
    display: flex;
    justify-content: space-between;
    color: #261500;
    font-size: 18pt;
    text-align: left;
    padding: 5px;
}

.titleItem {
    justify-content: center;
}

.myStoriesBtn {
    border-style: none;
    color: #261500;
    /*color: #b3a995;*/
    font-size: 11pt;
    padding: 5px;
}

.myStoriesBtn:hover {
    color: #c15a2e; 
    /*color: #261500;*/
    text-decoration: none;
    cursor: pointer; 
}

.saveIcon {
    color: #261500;
    border-style: none;
    font-size: 11pt;
    padding: 5px;
}

.selectDialect {
    font-size: 8pt;
}

.backArrow {
    margin-right: 5px;
}

.bookHeader {
  display: flex;
  margin-top: -2.5em;
  flex-direction: column;
  padding: 15px;
  padding-bottom: 5px;
}

.headerUpper {
    display: flex;
    justify-content: space-between;
}

.lowerHeader {
    width: 100%;
    display: flex;
    justify-content: center;
}

.textField {
    width: 100%;
    min-height: var(--textfieldHeight);
    height: auto;
    /* height: var(--textfieldHeight); */
    resize: none;
    z-index: 1;
    color: #261500;
    background: #f7f2e7;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
}

quill-editor {
  width: 100%;
  height: 10vh;
}

.quill-editor-dict {
  /* dictionary view adds another toolbar worth of height */
  height: calc(var(--textfieldHeight) - 44px);
}

.text-input-highlight-container .text-highlight-element  {
  background: #f7f2e7;
}

.bg-blue {
  background-color: lightblue;
}


.closeFeedbackBtn {
  margin-left: auto;
}

.closeFeedbackBtn:hover {
  cursor: pointer;
}

.closeDictionaryBtn {
  margin-left: auto;
}

.closeDictionaryBtn:hover {
  cursor: pointer;
}

.dictionary {
  width: 90%;
  height: 40vh;
}

.dictionaryModeContainer {
  display: flex;
}

.dictionaryContainer {
  border-top: solid grey 1px;
  width: 100%;
  display: flex;
  flex-direction: column;
}
.dictionaryHeight {
  height: var(--dictionaryHeight);
}

.dictionaryIframe {
  height: var(--dictionaryHeight);
  width: 100%;
}

.dictionaryVisibleTextField {
  height: var(--textfieldHeight);
  width: calc(100% - var(--dictionaryWidth));
}

.saveBtn {
  font-size: 14pt;
  border-style: none;
  color: white;
  font-size: 12pt;
  margin: 0px;
  margin-right: 5%;
  margin-left: auto;
  border-radius: 5px 5px 5px 5px;
}

.audioPlayer {
  height: 30px;
  width: 90%;
  background-color: #f1f3f4;
  border: 1px solid #8c806e86;
}

.storyContainer {
  z-index: 1;
  --feedbackHeight: 120px;
  --grammarMessageHeight: 80px;
  --dictionaryWidth: 100%;
}

.tickIcon {
    margin-left: 5px;
}

.savedBtn {
    background-color: #70a87f;
}

.footerBtnContainer {
    display: flex;
    
}

.hidableOptions {
  display: flex;
  justify-content: space-between;
}

.hidableOptions:hover {
  background-color: #aeffc486;
}

.optionsBtnContainer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
/* ... */

